# vst-gain

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml
cmake/: CPM.cmake
docs/: parameter-system.md  presets.md  setup.md  stack.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/infra/parameters/: ParameterRegistry.cpp  ParameterRegistry.h
src/infra/state/: PresetStore.cpp  PresetStore.h
